# Rudnevo-App

./: .gitignore  README.md  analyze_excel.py  docker-compose.yaml  schedule.xlsx  schedule_rudnevo.xlsx
admin-panel/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
admin-panel/app/: __init__.py  run.py
admin-panel/app/api/: client.py
admin-panel/app/core/: config.py
admin-panel/app/models/: user.py
admin-panel/app/routes/: admin.py  auth.py  panel.py
admin-panel/app/services/: api.py
admin-panel/app/static/css/: reset.css  style.css
admin-panel/app/static/css/auth/: login.css  register.css
admin-panel/app/static/css/panel/: base.css  home.css  profile.css
admin-panel/app/static/css/panel/news/: news_list.css
admin-panel/app/static/js/: flash.js  login.js  main.js
admin-panel/app/static/js/panel/: filter_preserver.js
admin-panel/app/templates/: base.html
admin-panel/app/templates/admin/: index.html  news.html  news_form.html  users.html
admin-panel/app/templates/auth/: change_password.html  forgot_password.html  login.html  register.html  reset_password.html
admin-panel/app/templates/errors/: 403.html
admin-panel/app/templates/panel/: base.html  home.html  profile.html
admin-panel/app/templates/panel/colleges/: colleges_list.html
admin-panel/app/templates/panel/feedback/: feedback_list.html
admin-panel/app/templates/panel/news/: news_list.html
admin-panel/app/templates/panel/partners/: partners_list.html
admin-panel/app/templates/panel/reviews/: review_form.html  reviews_list.html
admin-panel/app/templates/panel/schedule/: schedule_list.html  schedule_templates.html  upload_schedule.html
admin-panel/app/templates/panel/users/: users_list.html
admin-panel/app/utils/: panel.py
backend/: Dockerfile  README.md  STUDENTS_API.md  docker-compose.yml  migration_vacancy_fields.sql  pyproject.toml
backend/app/: __init__.py  main.py  run.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  action.py  auth.py  colleges.py  feedback.py  news.py  partners.py  password.py  reviews.py  schedule.py  student.py  users.py  vacancy.py
backend/app/articles/: crud.py  models.py  router.py  schemas.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: __init__.py  action.py  college.py  feedback.py  news.py  partner.py  review.py  schedule.py  student.py  user.py  vacancy.py
backend/app/db/: custom_types.py  session.py
backend/app/models/: __init__.py  action.py  base.py  college.py  feedback.py  news.py  partner.py  review.py  schedule.py  student.py  user.py  vacancy.py
backend/app/questions/: models.py
backend/app/schedules/: crud.py  models.py  router.py  schemas.py
backend/app/schemas/: action.py  college.py  feedback.py  news.py  partner.py  password.py  review.py  schedule.py  student.py  token.py  user.py  vacancy.py
backend/app/users/: auth.py  crud.py  dependencies.py  email_service.py  models.py  router.py  schemas.py
backend/app/utils/: email.py  files.py  schedule_generator.py  task_scheduler.py
backend/app/utils/email-templates/: feedback_response.html  registration.html  reset_password.html
frontend/: Dockerfile  pyproject.toml
frontend/app/: app.py
frontend/app/core/: config.py
frontend/app/rest/auth/: views.py
frontend/app/schemas/: users.py
frontend/app/static/css/: login.css  register.css  style.css
frontend/app/static/js/: login.js  register.js
frontend/app/templates/: base.html
frontend/app/templates/auth/: login.html  register.html
(+23 files in other folders)
