[tool.poetry]
name = "rudnevo-backend"
version = "0.1.0"
description = ""
authors = ["terlyne <sheyynovd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"
python-jose = "^3.4.0"
uvicorn = "^0.34.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
fastapi-mail = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
